--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+  <main>
   <div class="container">
 
     <div class="child1 box">
@@ -28,7 +29,7 @@
         <section class="tittle">
           <h1>Daniel Clifford</h1>
           <span>
-            <p>Verified Graduate</p>
+            Verified Graduate
           </span>
         </section>
 
@@ -52,7 +53,7 @@
       <section class="tittle">
         <h1>Jonathan Walters</h1>
         <span>
-          <p>Verified Graduate</p>
+          Verified Graduate
         </span>
       </section>
 
@@ -70,7 +71,7 @@
       <section class="tittle">
         <h1>Jeanette Harmon</h1>
         <span class="grey">
-          <p>Verified Graduate</p>
+          Verified Graduate
         </span>
       </section>
 
@@ -87,7 +88,7 @@
       <section class="tittle">
         <h1>Patrick Abrams</h1>
         <span>
-          <p>Verified Graduate</p>
+          Verified Graduate
         </span>
       </section>
 
@@ -108,7 +109,7 @@
       <section class="tittle">
         <h1>Kira Whittle</h1>
         <span class="grey">
-          <p>Verified Graduate</p>
+          Verified Graduate
         </span>
       </section>
 
@@ -128,11 +129,13 @@
       </p>
       </div>
     </div>
+    
   </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Bheki Accion Nkomo</a>.
   </div>
+  </main>
 </body>
 
 </html>
